186 fixed, and popup behavior on mobile fixed

--- a/FE/app/styles/modules/landing/_landing.scss
+++ b/FE/app/styles/modules/landing/_landing.scss
@@ -14,7 +14,15 @@ $landingBottomSize : 100% - $landingTopSize;
 };
 
 .modal-content {
-    width: 460px;
+    @include bp(xs) {
+        max-width: 460px;
+    }
+    @include bp(sm) {
+        width: 460px;
+    }
+    @include bp(md) {
+        width: 460px;
+    }
     margin: 0 auto;
 }
 
@@ -100,7 +108,7 @@ $landingBottomSize : 100% - $landingTopSize;
     }
 
     .landing-page-logo{
-        background-image:url($imageRoot + 'Text_Medium.png');   
+        background-image:url($imageRoot + 'Text_Medium.png');
         height: 68px;
         margin-top: 90px;
         background-repeat: no-repeat;
@@ -121,7 +129,7 @@ $landingBottomSize : 100% - $landingTopSize;
     // prepare classes for gallery imgs
     @for $i from 1 through 4{
         .carousel_img_LP_#{$i}{
-            background-image:url($imageRoot + 'LP_#{$i}.jpg');   
+            background-image:url($imageRoot + 'LP_#{$i}.jpg');
         }
     }
 
@@ -129,11 +137,11 @@ $landingBottomSize : 100% - $landingTopSize;
             height:100%;
     }
 
-    .carousel-indicators { 
+    .carousel-indicators {
         top: 390px;
     }
 
-    @media (max-width: 768px) { 
+    @media (max-width: 768px) {
         .landing-bottom{
             display: none;
         }
@@ -175,7 +183,7 @@ $landingBottomSize : 100% - $landingTopSize;
         .landing-top, .carousel, .carousel_data, .carousel_img, .carousel-inner, .carousel-inner > .item{
             height:100%;
         }
-        
+
         .carousel-indicators{
             display: none;
         }
@@ -183,7 +191,7 @@ $landingBottomSize : 100% - $landingTopSize;
         // prepare classes for gallery imgs MOBILE
         @for $i from 1 through 4{
             .carousel_img_LP_#{$i}{
-                background-image:url($imageRoot + 'LP_#{$i}_mobile.jpg');   
+                background-image:url($imageRoot + 'LP_#{$i}_mobile.jpg');
             }
         }
     }
@@ -197,13 +205,13 @@ $landingBottomSize : 100% - $landingTopSize;
             top: 370px;
         }
 
-        @media (max-width: 768px) { 
+        @media (max-width: 768px) {
             .landing-page-logo {
                 margin-top: 20px;
-            }      
+            }
             .landing-page-text{
                 max-height: 88px;
-            }      
+            }
         }
     }
 
@@ -219,10 +227,10 @@ $landingBottomSize : 100% - $landingTopSize;
             margin-top: 15px;
         }
 
-        @media (max-width: 768px) { 
+        @media (max-width: 768px) {
             .landing-page-text{
                 max-height: 88px;
-            }      
+            }
         }
     }
 
