--- a/FE/app/styles/modules/store-locator/_store-locator.scss
+++ b/FE/app/styles/modules/store-locator/_store-locator.scss
@@ -126,6 +126,7 @@
 
   @include bp(xs) {
     margin-top: 40px;
+    width: 100%;
   }
   div {
     text-align: center;
